# src/modules/businesses/businesses.routes.ts
@@ -5,15 +5,16 @@ import { Hono } from "hono";
 import { businessesRouteSchema } from "./businesses.schema";
 import { businessesService } from "./businesses.service";
 import { businessAddressRoutes } from "./modules/business-address/business-address.routes";
-import { listingsRoutes } from "./modules/listings/listings.routes";
 import { employeesRoutes } from "./modules/employees/employees.routes";
+import { employeeRoleProtectedMiddleware } from "./modules/employees/employees.utils";
+import { listingsRoutes } from "./modules/listings/listings.routes";
 
 export const businessesRoutes = new Hono()
     .use(protectedMiddleware({ type: "user" }))
 
     .on(...route("GET /", businessesRouteSchema), async (c) => {
         const userId = c.get("user").id;
-        const businesses = await businessesService.findAll({ ownerId: userId });
+        const businesses = await businessesService.findAll({ userId });
         return c.json(businesses, HTTP_STATUS["OK"]);
     })
 
@@ -22,7 +23,7 @@ export const businessesRoutes = new Hono()
         const userId = c.get("user").id;
         const business = await businessesService.create({
             ...json,
-            ownerId: userId,
+            userId,
         });
 
         return c.json(business, HTTP_STATUS["Created"]);
@@ -30,43 +31,49 @@ export const businessesRoutes = new Hono()
 
     .on(...route("GET /:businessId", businessesRouteSchema), async (c) => {
         const { businessId } = c.req.valid("param");
-        const userId = c.get("user").id;
         const business = await businessesService.find({
             id: businessId,
-            ownerId: userId,
         });
 
         return c.json(business, HTTP_STATUS["OK"]);
     })
 
-    .on(...route("PATCH /:businessId", businessesRouteSchema), async (c) => {
-        const { businessId } = c.req.valid("param");
-        const json = c.req.valid("json");
-        const userId = c.get("user").id;
-        const business = await businessesService.update({
-            id: businessId,
-            ownerId: userId,
-            ...json,
-        });
+    .on(
+        ...route("PATCH /:businessId", businessesRouteSchema),
+        employeeRoleProtectedMiddleware({ role: "manager" }),
+        async (c) => {
+            const { businessId } = c.req.valid("param");
+            const json = c.req.valid("json");
+            const userId = c.get("user").id;
+            const business = await businessesService.update({
+                id: businessId,
+                userId,
+                ...json,
+            });
 
-        return c.json(business, HTTP_STATUS["OK"]);
-    })
+            return c.json(business, HTTP_STATUS["OK"]);
+        },
+    )
 
-    .on(...route("DELETE /:businessId", businessesRouteSchema), async (c) => {
-        const { businessId } = c.req.valid("param");
-        const userId = c.get("user").id;
-        await businessesService.delete({
-            id: businessId,
-            ownerId: userId,
-        });
+    .on(
+        ...route("DELETE /:businessId", businessesRouteSchema),
+        employeeRoleProtectedMiddleware({ role: "owner" }),
+        async (c) => {
+            const { businessId } = c.req.valid("param");
+            const userId = c.get("user").id;
+            await businessesService.delete({
+                id: businessId,
+                userId,
+            });
 
-        return c.json(
-            {
-                success: true,
-            },
-            HTTP_STATUS["OK"],
-        );
-    })
+            return c.json(
+                {
+                    success: true,
+                },
+                HTTP_STATUS["OK"],
+            );
+        },
+    )
 
     .route("/:businessId/address", businessAddressRoutes)
     .route("/:businessId/listings", listingsRoutes)
